--- a/app/styles/fonts.css
+++ b/app/styles/fonts.css
@@ -1,3 +1,3 @@
 @import url('https://fonts.googleapis.com/css2?family=Amaranth:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Changa+One&display=swap');
